src/test/contracts/negative/emit_bad_tag.mligo
let main (_ : unit) (_ : string) : operation list * string =
  [Tezos.emit "%hello world" 12], "bye"
